# aurman

./: .gitignore  AUTHORS  HACKING  INSTALL  Makefile.am  Makefile.in  README  SUBMIT_PATCH  TRANSLATION  TRANSLATORS  acinclude.m4  aclocal.m4  autoclean.sh  autogen.sh  config.h.in  config.h.in~  configure  configure.ac  valgrind.supp
autom4te.cache/: output.0  output.1  requests  traces.0  traces.1  traces.2
contrib/: Makefile.am  Makefile.in  README  pkgfile.c
doc/: Doxyfile  Makefile.am  Makefile.in  aurman.8  aurman.8.txt  aurman.8.xml  aurman.conf.5.txt  aurmanrc.5  aurmanrc.5.txt  aurmanrc.5.xml  footer.txt  index.txt  submitting-patches.txt  translation-help.txt
etc/: Makefile.am  Makefile.in  aurmanrc.in
lib/libalam/: Makefile.am  Makefile.in  add.c  add.h  alam.c  alam.h  alam_list.c  alam_list.h  backup.c  backup.h  be_files.c  be_package.c  cache.c  cache.h  conflict.c  conflict.h  db.c  db.h  delta.c  delta.h  deps.c  deps.h  dload.c  dload.h  error.c  graph.h  group.c  group.h  handle.c  handle.h  log.c  log.h  package.c  package.h  remove.c  remove.h  sync.c  sync.h  trans.c  trans.h  (+2 more)
lib/libalam/po/: Makefile.in  Makevars  POTFILES  POTFILES.in
m4/: .gitignore  gcc-inline.m4  gcc-ssp.m4  gcc-ssplib.m4  gcc-visibility.m4
po/: Makefile.in  Makevars  POTFILES  POTFILES.in  aurman.pot
scripts/: Makefile.am  Makefile.in
server/: mysql.c
src/aurman/: Makefile.am  Makefile.in  aurman  aurman.c  aurman.h  color.c  conf.c  conf.h  db.c  db.h  tag.c  util.c  util.h
src/aurman/.deps/: aurman.Po  conf.Po  db.Po  util.Po
src/util/: Makefile.am  Makefile.in
